# barcode-analyser

./: Cargo.toml  LISENSE  tmp.json
src/: app.rs  main.rs
src/app/: app.rs  bookdata.rs  fooddata.rs  mod.rs  serial_read.rs
src/book_data/: google.rs  mod.rs  open_libary.rs
src/food_data/: mod.rs  open_food_facts.rs
