[package]
name = "barcode-analyser"
version = "0.1.0"
edition = "2024"
authors = ["Shadowbee<shadowbee.contact@proton.me>"]
license = "GPL-3.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde_json = "1.0.146"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
image = "0.25.9"
eframe = "0.33.3"
egui_tiles = "0.14.1"
egui-file-dialog = "0.12.0"
egui_extras = "0.33.3"
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git" }
open-library = "0.7.1"

[target.'cfg(windows)'.dependencies]
serial-windows = "0.4.0"

[target.'cfg(unix)'.dependencies]
serial = "0.4.0"
