[package]
name = "barcode-analyser"
version = "0.2.0"
edition = "2024"
authors = ["Shadowbee<shadowbee.contact@proton.me>"]
license = "GPL-3.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.10"
image = "0.25.10"
eframe = "0.34.1"
egui_tiles = "0.15.0"
egui-file-dialog = "0.13.0"
egui_extras = "0.34.1"
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git" }
open-library = "0.7.1"
strum_macros = "0.28.0"
strum = "0.28.0"
serialport = "4.9.0"
